--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,19 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[lib]
+path = "src/lib.rs"
+name = "zero2prod"
+
 [dependencies]
 actix-web = "4.0.0-beta.3"
+serde = "1.0.115"
+config = { version = "0.10.1", default-features = false, features = ["yaml"] }
+sqlx = { version = "0.5.1", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
+uuid = { version = "0.8.1", features = ["v4"] }
+chrono = "0.4.15"
+
+[dev-dependencies]
+actix-rt = "2"
+reqwest = { version = "0.11", features = ["json"] }
+tokio = "1"
