--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,9 @@ path = "src/lib.rs"
 name = "zero2prod"
 
 [dependencies]
-actix-web = "4.0.0-beta.3"
+actix-http = "=3.0.0-beta.5"
+actix-service = "=2.0.0-beta.5"
+actix-web = "=4.0.0-beta.5"
 serde = "1.0.115"
 config = { version = "0.10.1", default-features = false, features = ["yaml"] }
 sqlx = { version = "0.5.1", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
