--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,8 +19,15 @@ config = { version = "0.10.1", default-features = false, features = ["yaml"] }
 sqlx = { version = "0.5.1", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
 uuid = { version = "0.8.1", features = ["v4"] }
 chrono = "0.4.15"
+tracing = { version = "0.1", features = ["log"] }
+tracing-futures = "0.2.5"
+tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter"] }
+tracing-bunyan-formatter = "0.2.4"
+tracing-log = "0.1.2"
+tracing-actix-web = "0.4.0-beta.4"
 
 [dev-dependencies]
 actix-rt = "2"
+once_cell = "1.7.2"
 reqwest = { version = "0.11", features = ["json"] }
 tokio = "1"
